syntax = "proto3";

package clutch.resolver.k8s.v1;

option go_package = "github.com/lyft/clutch/backend/api/resolver/k8s/v1;k8sv1";

import "resolver/v1/annotations.proto";

message PodID {
  option (clutch.resolver.v1.schema) = {
    display_name : "pod ID"
    search : {enabled : true}
  };

  string name = 1 [ (clutch.resolver.v1.schema_field) = {
    display_name : "Name",
    required : true,
    string_field : {
      placeholder : "my-pod-name",
    },
  } ];

  string clientset = 2 [ (clutch.resolver.v1.schema_field) = {
    display_name : "Clientset",
    required : true,
    option_field : {include_dynamic_options : "clientset"},
  } ];

  string namespace = 3 [ (clutch.resolver.v1.schema_field) = {
    display_name : "Namespace",
    required : true,
    string_field : {
      placeholder : "my-namespace",
    },
  } ];
}

message IPAddress {
  option (clutch.resolver.v1.schema) = {
    display_name : "IP address"
    search : {enabled : true}
  };

  string ip_address = 1 [ (clutch.resolver.v1.schema_field) = {
    display_name : "IP Address",
    required : true,
    string_field : {
      placeholder : "10.0.0.1",
    },
  } ];
}

message HPAName {
  option (clutch.resolver.v1.schema) = {
    display_name : "name"
    search : {enabled : true}
  };

  string name = 1 [ (clutch.resolver.v1.schema_field) = {
    display_name : "Name",
    required : true,
    string_field : {
      placeholder : "my-hpa-name",
    },
  } ];

  string clientset = 2 [ (clutch.resolver.v1.schema_field) = {
    display_name : "Clientset",
    required : true,
    option_field : {include_dynamic_options : "clientset"},
  } ];

  string namespace = 3 [ (clutch.resolver.v1.schema_field) = {
    display_name : "Namespace",
    required : true,
    string_field : {
      placeholder : "my-namespace",
    },
  } ];
}

message Deployment {
  option (clutch.resolver.v1.schema) = {
    display_name : "name"
    search : {enabled : true}
  };

  string name = 1 [ (clutch.resolver.v1.schema_field) = {
    display_name : "Name",
    required : true,
    string_field : {
      placeholder : "my-deployment-name",
    },
  } ];

  string clientset = 2 [ (clutch.resolver.v1.schema_field) = {
    display_name : "Clientset",
    required : true,
    option_field : {include_dynamic_options : "clientset"},
  } ];

  string namespace = 3 [ (clutch.resolver.v1.schema_field) = {
    display_name : "Namespace",
    required : true,
    string_field : {
      placeholder : "my-namespace",
    },
  } ];
}

message StatefulSet {
  option (clutch.resolver.v1.schema) = {
    display_name : "name"
    search : {enabled : true}
  };

  string name = 1 [ (clutch.resolver.v1.schema_field) = {
    display_name : "Name",
    required : true,
    string_field : {
      placeholder : "my-statefulset-name",
    },
  } ];

  string clientset = 2 [ (clutch.resolver.v1.schema_field) = {
    display_name : "Clientset",
    required : true,
    option_field : {include_dynamic_options : "clientset"},
  } ];

  string namespace = 3 [ (clutch.resolver.v1.schema_field) = {
    display_name : "Namespace",
    required : true,
    string_field : {
      placeholder : "my-namespace",
    },
  } ];
}

message Service {
  option (clutch.resolver.v1.schema) = {
    display_name : "name"
    search : {enabled : true}
  };

  string name = 1 [ (clutch.resolver.v1.schema_field) = {
    display_name : "Name",
    required : true,
    string_field : {
      placeholder : "my-service-name",
    },
  } ];

  string clientset = 2 [ (clutch.resolver.v1.schema_field) = {
    display_name : "Clientset",
    required : true,
    option_field : {include_dynamic_options : "clientset"},
  } ];

  string namespace = 3 [ (clutch.resolver.v1.schema_field) = {
    display_name : "Namespace",
    required : true,
    string_field : {
      placeholder : "my-namespace",
    },
  } ];
}

message CronJob {
  option (clutch.resolver.v1.schema) = {
    display_name : "name"
    search : {enabled : true}
  };

  string name = 1 [ (clutch.resolver.v1.schema_field) = {
    display_name : "Name",
    required : true,
    string_field : {
      placeholder : "my-cronjob-name",
    },
  } ];

  string clientset = 2 [ (clutch.resolver.v1.schema_field) = {
    display_name : "Clientset",
    required : true,
    option_field : {include_dynamic_options : "clientset"},
  } ];

  string namespace = 3 [ (clutch.resolver.v1.schema_field) = {
    display_name : "Namespace",
    required : true,
    string_field : {
      placeholder : "my-namespace",
    },
  } ];
}

message ConfigMap {
  option (clutch.resolver.v1.schema) = {
    display_name : "name"
    search : {enabled : true}
  };

  string name = 1 [ (clutch.resolver.v1.schema_field) = {
    display_name : "Name",
    required : true,
    string_field : {
      placeholder : "my-config-map-name",
    },
  } ];

  string clientset = 2 [ (clutch.resolver.v1.schema_field) = {
    display_name : "Clientset",
    required : true,
    option_field : {include_dynamic_options : "clientset"},
  } ];

  string namespace = 3 [ (clutch.resolver.v1.schema_field) = {
    display_name : "Namespace",
    required : true,
    string_field : {
      placeholder : "my-namespace",
    },
  } ];
}

message Job {
  option (clutch.resolver.v1.schema) = {
    display_name : "name"
    search : {enabled : true}
  };

  string name = 1 [ (clutch.resolver.v1.schema_field) = {
    display_name : "Name",
    required : true,
    string_field : {
      placeholder : "my-job-name",
    },
  } ];

  string clientset = 2 [ (clutch.resolver.v1.schema_field) = {
    display_name : "Clientset",
    required : true,
    option_field : {include_dynamic_options : "clientset"},
  } ];

  string namespace = 3 [ (clutch.resolver.v1.schema_field) = {
    display_name : "Namespace",
    required : true,
    string_field : {
      placeholder : "my-namespace",
    },
  } ];
}

message Namespace {
  option (clutch.resolver.v1.schema) = {
    display_name : "name"
    search : {enabled : true}
  };

  string name = 1 [ (clutch.resolver.v1.schema_field) = {
    display_name : "Name",
    required : true,
    string_field : {
      placeholder : "my-namespace",
    },
  } ];

  string clientset = 2 [ (clutch.resolver.v1.schema_field) = {
    display_name : "Clientset",
    required : true,
    option_field : {include_dynamic_options : "clientset"},
  } ];
}

message Node {
  option (clutch.resolver.v1.schema) = {
    display_name : "Node Name"
    search : {enabled : true}
  };

  string name = 1 [ (clutch.resolver.v1.schema_field) = {
    display_name : "Name",
    required : true,
    string_field : {
      placeholder : "node-name",
    },
  } ];

  string cluster = 2 [ (clutch.resolver.v1.schema_field) = {
    display_name : "Cluster",
    required : true,
    string_field : {
      placeholder : "cluster-name",
    },
  } ];

  string clientset = 3 [ (clutch.resolver.v1.schema_field) = {
    display_name : "Clientset",
    required : true,
    option_field : {include_dynamic_options : "clientset"},
  } ];
}
